gl33-master/src/test/deca/context/invalid/other/affectation_void_float.deca
// Invalid test
// Affectation d'un void à un flottant

{
   float x;
   void v;

   x = v;
}
